# ship-backend/driving-adapter/src/main/kotlin/com/sonicdevelopment/driving/adapter/web/CargoController.kt
@@ -2,7 +2,7 @@ package com.sonicdevelopment.driving.adapter.web
 
 import com.sonicdevelopment.domain.ports.driving.cargo.AvailableCargoDTO
 import com.sonicdevelopment.domain.ports.driving.cargo.CargoInformationPort
-import com.sonicdevelopment.driving.adapter.web.responsemodel.CargoResponse
+import com.sonicdevelopment.driving.adapter.web.responsemodel.AvailableCargoResponse
 import org.springframework.web.bind.annotation.CrossOrigin
 import org.springframework.web.bind.annotation.GetMapping
 import org.springframework.web.bind.annotation.RequestMapping
@@ -15,13 +15,14 @@ class CargoController(
     private val cargoInformationPort: CargoInformationPort
 ) {
     @GetMapping
-    fun getCargos(): List<CargoResponse> =
-        cargoInformationPort.getAvailableCargo().map {toCargoResponse(it)}
+    fun getCargos(): List<AvailableCargoResponse> =
+        cargoInformationPort.getAvailableCargo().map { toAvailableCargoResponse(it) }
 
-    private fun toCargoResponse(cargo: AvailableCargoDTO) =
-        CargoResponse(
+    private fun toAvailableCargoResponse(cargo: AvailableCargoDTO) =
+        AvailableCargoResponse(
             id = cargo.id.id,
             name = cargo.name,
-            weight = cargo.weight
+            weight = cargo.weight,
+            stock = cargo.stock
         )
 }
